[project]
name = "github-artifact-downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.5",
    "plyer>=2.1.0",
    "dbus-python>=1.4.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
]

[tool.mypy]
ignore_missing_imports = true
